common.mk: MAKE_ENC
* common.mk (MAKE_ENC): arguments for enc.mk

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55932 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/Makefile.in
+++ b/Makefile.in
@@ -439,7 +439,7 @@ clean-extout:
 clean-enc distclean-enc realclean-enc:
 	@test -f "$(ENC_MK)" || exit 0; \
 	echo $(@:-enc=ing) encodings; \
-	exec $(MAKE) -f $(ENC_MK) $(MFLAGS) $(@:-enc=)
+	exec $(MAKE) $(MAKE_ENC) $(@:-enc=)
 
 ext/extinit.$(OBJEXT): ext/extinit.c $(SETUP)
 	$(ECHO) compiling $@
